<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/mail"
    android:background="@color/light_gray"
    tools:context=".Fragment.MailFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:minHeight="@dimen/minHeightTool"
        android:paddingHorizontal="@dimen/horPad"
        android:paddingVertical="@dimen/verPad">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/BackButtonStyle"
            android:contentDescription="@string/backbtn"
            android:src="@drawable/ic_back_arrow" />

        <ImageButton
            android:id="@+id/trashButton"
            style="@style/TrashButton"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/trashbtn"
            android:src="@drawable/ic_trash" />

        <ImageButton
            android:id="@+id/menuButton"
           style="@style/TrashButton"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menubtm"
            android:src="@drawable/ic_options" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="@dimen/minHeight"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="@dimen/padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backButton">

                <LinearLayout
                    android:id="@+id/userProfileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/marginStart"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="@dimen/imgWidth"
                        android:layout_height="@dimen/imgHeight"
                        android:contentDescription="@string/profileimage"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/profile_picture"
                        android:src="@drawable/profile_picture" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/marginStart">


                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/textSize"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/userEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/userName"
                            android:layout_alignParentEnd="true"
                            android:text="@string/kris13_gmail_com"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/textSize" />

                        <TextView
                            android:id="@+id/timeAgo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/userName"
                            android:text="@string/_1h_ago"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/textSize" />

                    </RelativeLayout>
                </LinearLayout>

            <TextView
                android:id="@+id/email_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginStart"
                android:text="@string/email_subject"
                android:textAppearance="@style/email_subject"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lineSpacingExtra="@dimen/lineSpace"
                android:text="@string/email_content"
                android:textAppearance="@style/email_content"
                android:translationY="@dimen/YTrans" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/mailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/buttonMinHeight"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/verPad"
        android:paddingHorizontal="@dimen/horPad">

        <Button
            android:id="@+id/forwardBtn"
            android:contentDescription="@string/btnforword"
            style="@style/ReplyForward"
            android:text="@string/forwardText"
            android:drawableLeft="@drawable/forward_icon"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/btn_bg"/>

        <Button

            android:id="@+id/replyBtn"
            style="@style/ReplyForward"
            android:drawableLeft="@drawable/reply_icon"
            android:text="@string/replyText"
            android:layout_marginStart="@dimen/buttonMarginStart"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
