<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="84dp"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:alpha="0.8"
            android:text="@string/sign_in_to_your_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0.8"
            android:text="@string/email_address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:theme="@style/MyTextInputLayout_overlay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/emailSender" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:alpha="0.8"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:alpha="0.7"
                android:text="@string/remember_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:theme="@style/MyTextInputLayout_overlay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:alpha="0.8"
                android:text="@string/i_forgot_my_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/red"
            android:text="@string/log_in"
            android:textAllCaps="true"
            app:cornerRadius="50dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>